--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,14 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <h1>Aqui Hacemos un Blog</h1>
-        <p>Este es el Parrafo de Inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es es el Titulo atractivo e interesante del Post</h1>
+                <p>Este es el Parrafo de inicio donde vamos 
+                    a explicar las cosas increibles  que se pueden hacer con ramas
+                </p>
+            </div>
+        </div>
+        
     </body>
 </html>
