Estructuta inicial de la Cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>Este es es el Titulo atractivo e interesante del Post</h1>
                 <p>Este es el Parrafo de inicio donde vamos 
