--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,9 @@
                 <p>Este es el Parrafo de inicio donde vamos 
                     a explicar las cosas increibles  que se pueden hacer con ramas
                 </p>
+                <p>
+                    los blogs son la mejor forma de compartir infirmacion y tus ideas . mucho mas que que ir a conferencias y salir en youtube. Escepto si eres un rockstar. Pero estadisticamente no lo eres.... por ahora.
+                </p>
             </div>
         </div>
         
