--- a/blogpost.html
+++ b/blogpost.html
@@ -11,8 +11,7 @@
             </div>
             <div id="post">
                 <h1>Este es es el Titulo atractivo e interesante del Post</h1>
-                <p>Este es el Parrafo de inicio donde vamos 
-                    a explicar las cosas increibles  que se pueden hacer con ramas
+                <p>Este es el Parrafo de inicio donde vamos a explicar las cosas increibles  que se pueden hacer con ramas
                 </p>
                 <p>
                     los blogs son la mejor forma de compartir infirmacion y tus ideas . mucho mas que que ir a conferencias y salir en youtube. Escepto si eres un rockstar. Pero estadisticamente no lo eres.... por ahora.
