Cambio a Maestro, color de letra a AZul y Parrafo suscribete

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog Maestro</span>
             </div>
             <div id="post">
                 <h1>Este es es el Titulo atractivo e interesante del Post</h1>
@@ -16,6 +16,7 @@
                 <p>
                     los blogs son la mejor forma de compartir infirmacion y tus ideas . mucho mas que que ir a conferencias y salir en youtube. Escepto si eres un rockstar. Pero estadisticamente no lo eres.... por ahora.
                 </p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>
         
