--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El Titulo del Post</title>
+        <title>BIENVENIDO A HYPERBLOG</title>
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
